--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^3.4.0",
-    "@types/node": "^20.2.5",
-    "astro": "^2.4.1"
+    "@astrojs/svelte": "^4.0.3",
+    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^4.0.5",
+    "@types/node": "^20.8.5",
+    "astro": "^3.3.0",
+    "axios": "^1.5.1",
+    "svelte": "^4.2.1",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.3"
   },
-  "license": "ISC"
+  "license": "MIT"
 }
