--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.8.5",
     "astro": "^3.3.0",
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "svelte": "^4.2.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3"
