--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^4.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "@astrojs/vercel": "^4.0.5",
-    "@types/node": "^20.8.5",
-    "astro": "^3.3.0",
-    "axios": "^1.5.1",
-    "moment": "^2.29.4",
-    "svelte": "^4.2.1",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/svelte": "^5.6.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.1",
+    "@types/node": "^20.14.8",
+    "astro": "^4.11.0",
+    "axios": "^1.7.2",
+    "moment": "^2.30.1",
+    "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2"
   },
   "license": "MIT"
 }
