--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "@astrojs/vercel": "^7.7.1",
     "@types/node": "^20.14.8",
     "astro": "^4.11.0",
+    "astro-icon": "^1.1.0",
     "axios": "^1.7.2",
     "moment": "^2.30.1",
     "svelte": "^4.2.18",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@iconify-json/cib": "^1.1.8",
+    "@iconify-json/devicon": "^1.1.44",
+    "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/simple-icons": "^1.1.107",
+    "@iconify-json/vscode-icons": "^1.1.35"
+  }
 }
