--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.14.8",
     "astro": "^4.11.0",
     "astro-icon": "^1.1.0",
+    "astro-navbar": "^2.3.3",
     "axios": "^1.7.2",
     "moment": "^2.30.1",
     "svelte": "^4.2.18",
@@ -31,7 +32,6 @@
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/simple-icons": "^1.1.107",
     "@iconify-json/vscode-icons": "^1.1.35",
-    "@iconify/svelte": "^4.0.2",
     "iconify-icon": "^2.1.0"
   }
 }
