--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/svelte": "^5.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.1",
+    "@fontsource-variable/bricolage-grotesque": "^5.0.6",
     "@types/node": "^20.14.8",
     "astro": "^4.11.0",
     "astro-icon": "^1.1.0",
