--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,24 @@
 # build output
 dist/
-.vercel
 
 # generated types
 .astro/
 
 # dependencies
 node_modules/
-pnpm-lock.yaml
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # environment variables
 .env
+.env.production
 
-# prettier
-.prettierrc
+# macOS-specific files
+.DS_Store
+
+# jetbrains setting folder
+.idea/
