--- a/package.json
+++ b/package.json
@@ -1,39 +1,21 @@
 {
-  "name": "gabryy.me",
+  "name": "astro",
   "type": "module",
-  "version": "0.2.1",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/svelte": "^5.6.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.1",
-    "@fontsource-variable/bricolage-grotesque": "^5.0.6",
-    "@types/node": "^20.14.8",
-    "astro": "^4.11.0",
-    "astro-icon": "^1.1.0",
-    "astro-navbar": "^2.3.3",
-    "axios": "^1.7.2",
-    "moment": "^2.30.1",
-    "svelte": "^4.2.18",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@iconify-json/ci": "^1.1.13",
-    "@iconify-json/cib": "^1.1.8",
-    "@iconify-json/devicon": "^1.1.44",
-    "@iconify-json/ic": "^1.1.17",
-    "@iconify-json/mdi": "^1.1.67",
-    "@iconify-json/simple-icons": "^1.1.107",
-    "@iconify-json/vscode-icons": "^1.1.35",
-    "iconify-icon": "^2.1.0"
+    "@astrojs/svelte": "^7.0.8",
+    "@astrojs/tailwind": "^6.0.2",
+    "@fontsource/poppins": "^5.1.1",
+    "astro": "^5.5.5",
+    "astro-icon": "^1.1.5",
+    "svelte": "^5.16.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
