--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/svelte": "^7.0.8",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.1.3",
     "@fontsource/poppins": "^5.1.1",
     "astro": "^5.5.5",
     "astro-icon": "^1.1.5",
